<resources>
    <string name="nu11">null</string>
    <string name="app_name">RCApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="蓝牙">蓝牙</string>
    <string name="蓝牙设备名">蓝牙设备名</string>
    <string name="连接">连接</string>
    <string name="蓝牙管理">蓝牙管理</string>
    <string name="设备名称">设备名称</string>
    <string name="设备地址">74:A5:8C:1A:43:73</string>
    <string name="信号强度">-54 dBm</string>
    <string name="已连接设备">已连接设备</string>
    <string name="已连接">已连接</string>

    <string name="相机">相机</string>
    <string name="发送测试数据">发送测试数据</string>
    <string name="指令发送时间">14:43:55</string>
    <string name="指令发送内容">"55 55 17 03 06 E8 03 06 EE 02 07 6E 01 08 C7 01 0E 14 03 0F 68 02 10 79 01"</string>
    <string name="发送">发送</string>
    <string name="摄像">摄像</string>
    <string name="摄像模拟">摄像模拟</string>
    <string name="拍照">拍照</string>

    <string name="title_activity_ble_service_base">BleServiceBaseActivity</string>


    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of pose detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of pose detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the pose landmarker.</string>

    <string name="label_inference_time">延时:</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_pose_detection_confidence_threshold">检测置信度</string>
    <string name="label_pose_tracking_confidence_threshold">跟踪置信度</string>
    <string name="label_pose_presence_confidence_threshold">存在置信度</string>
    <string name="label_num_poses">Number of Poses</string>
    <string name="label_delegate">委托</string>
    <string name="label_models">模式</string>
    <string name="plc_setting">plc_setting</string>
    <string name="camera_switch">camera_switch\n</string>
    <string name="_0ms">0ms</string>
    <string name="inference_time">%d</string>
    <string name="camera_time">00:00:00</string>
    <string name="毫秒">ms</string>
    <string name="账号">账号</string>
    <string name="密码">密码</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
    <string name="确认密码">确认密码</string>
    <string name="手机号">手机号</string>
    <string name="电子邮箱">电子邮箱(选填)</string>
    <string name="自动登录">自动登录</string>
    <string name="男">男</string>
    <string name="女">女</string>
    <string name="保密">保密</string>
    <string name="连接设备">连接设备</string>
    <string name="附近设备">附近设备</string>
    <string name="名称">名称</string>
    <string name="验证码">验证码</string>
    <string name="发送验证码">发送验证码</string>
    <string name="验证码登录">验证码登录</string>
    <string name="输入密码">输入密码</string>
    <string name="RCApp">RCApp</string>
    <string name="_1_0x">1.0x</string>
    <string name="骨架图">骨架图</string>
    <string name="自动追焦">自动追焦</string>
    <string name="余额">余额</string>
    <string name="推送">推送</string>
    <string name="手机号_">手机号:</string>
    <string name="录制视频">录制视频</string>
    <string name="退出账号">退出账号</string>
    <string name="头像">头像</string>
    <string name="用户指令">用户指令</string>
    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>Pose Landmarker Full</item>
        <item>Pose Landmarker Lite</item>
        <item>Pose Landmarker Heavy</item>
    </string-array>
    <string-array name="register_name_reminder_message">
        <item>1.用户名不得为空</item>
        <item>2.用户名最长为11个字符</item>
    </string-array>
    <string-array name="register_phone_reminder_message">
        <item>1.手机号为固定11位数字</item>
    </string-array>

    <string-array name="register_password_reminder_message">
        <item>1.密码最短为9个字符，最长为18个字符</item>
        <item>2.密码必须包含字母与数字，无特殊字符</item>
    </string-array>
    <string-array name="register_passwordConfirm_reminder_message">
        <item>1.两次密码必须相同</item>
    </string-array>
    <string-array name="register_email_reminder_message">
        <item>1.邮箱号为常规邮箱格式</item>
    </string-array>
</resources>