<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment"
    android:orientation="vertical">
    <Button
        android:id="@+id/CameraGo_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/相机"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataSendShow_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/ins_send_item_layout"
        android:layout_weight="1">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_marginStart="0dp"
            android:id="@+id/dataSend_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:autofillHints="AT"
            android:hint="@string/发送测试数据"
            android:inputType="text" />
        <Button
            android:layout_marginEnd="0dp"
            android:id="@+id/dataSend_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/发送"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>

