<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.poseLandmarker.CameraModelFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/running_model_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_blue_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/label_inference_time"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <TextView
                android:id="@+id/inference_time_val"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/inference_time"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/毫秒"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />
            <Chronometer
                android:id="@+id/camera_time_chr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <Space
                android:layout_width="66dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/plc_setting_iv"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_plm_setting" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/running_model_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.camera.view.PreviewView
                android:id="@+id/camera_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:scaleType="fillStart" />

                <com.example.rcapp.OverlayView
                    android:id="@+id/overlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</FrameLayout>