<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.rcapp.viewmodel.PoseSettingViewModel" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_blue_gray"
        tools:context=".fragment.poseLandmarker.PoseLandmarkerSettingFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/plc_setting_close_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_close"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/plc_setting_question_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_question"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_pose_detection_confidence_threshold"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/detection_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:text="@{String.valueOf(viewModel.currentDetectionConfidence)}"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_pose_tracking_confidence_threshold"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/tracking_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:text="@{String.valueOf(viewModel.currentTrackingConfidence)}"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_pose_presence_confidence_threshold"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/presence_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:text="@{String.valueOf(viewModel.currentPresenceConfidence)}"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Model selection row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

            <TextView
                android:text="@string/label_models"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textColor="@color/bottom_sheet_text_color" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/bottom_sheet_spinner_model_min_width"
                android:spinnerMode="dropdown"
                android:theme="@style/BottomSheetSpinnerItemStyle"
                android:layout_alignParentRight="true"
                android:entries="@array/models_spinner_titles"
                android:selectedItemPosition="@{viewModel.currentModel}"/>

        </RelativeLayout>

        <!-- Delegate selection row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_delegate"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:entries="@array/delegate_spinner_titles"
                android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width"
                android:spinnerMode="dropdown"
                android:theme="@style/BottomSheetSpinnerItemStyle"
                android:selectedItemPosition="@{viewModel.currentDelegate}"/>

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
